# nepse_scraper

./: .gitignore  LICENSE.txt  README.md  Scraper.py  paths.py  pyproject.toml  requirements.txt  sample.py  setup.py  tes.py  test_run.py  test_run_v1.py  todo.md
docs/: index.md
nepse_scraper/: Scraper.py  __init__.py  apis.py  auth.py  client.py  core.py  endpoints.py  exceptions.py  nepse.wasm
nepse_scraper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nepse_scraper/required_data/: headindices.csv
