[project]
name = "nepse-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "polymorphisma",email = "shrawansunar.6@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "retrying (>=1.4.2,<2.0.0)",
    "wasmtime (>=37.0.0,<38.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "certifi (>=2025.10.5,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
